# Alexio-Engine

./: CMakeLists.txt  LICENSE.txt  README.md
Editor/: CMakeLists.txt
Editor/Assets/cache/shaders/: Basic-ps.frag  Basic-vs.cso  Basic-vs.vert  Circle-ps.cso  Circle-ps.frag  Circle-vs.cso  Circle-vs.vert  Quad-ps.cso  Quad-ps.frag  Quad-vs.cso  Quad-vs.vert  Quad.cache
Editor/Source/: Editor.cpp  Editor.hpp  main.cpp
Engine/: CMakeLists.txt
Engine/Source/Audio/: VorbisAudio.hpp
Engine/Source/Core/: Application.cpp  Application.hpp  Layer.hpp
Engine/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Source/Renderer/: Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp
Engine/Source/Renderer/DX11/: DX11_Context.hpp  DX11_Framebuffer.cpp  DX11_Framebuffer.hpp
Engine/Source/Renderer/OpenGL/: OpenGL_Backend.cpp  OpenGL_Framebuffer.cpp  OpenGL_Framebuffer.hpp
Engine/Source/Utils/: Log.cpp  Log.hpp  Utilities.hpp
Sandbox/Source/: Sandbox.cpp  Sandbox.hpp  main.cpp
Third-Party-Licenses/: imgui-LICENSE.txt  stb_image-LICENSE.txt
